# test-scripts

./: validate_backup.sh
backup-tools/: README.md  backup.sh  backup_and_validate.sh  config.conf  databend-meta-node.toml  databend-query-node.toml  run_sql.sh  shutdown_databend.sh  startup_databend.sh  validate.sh
bench-io/: Cargo.toml
bench-io/src/: main.rs
bench_codec/: Cargo.toml
bench_codec/scripts/: analyse.py
bench_codec/src/: bench.rs  main.rs
multi-table-insert/sql/: txn.sql
multi-table-insert/src/: main.rs
perf_compact/: Cargo.toml  log
perf_compact/sql/: prepare_data.sql  setup.sql
perf_compact/src/: main.rs
