[package]
name = "bench-io"
version = "0.1.0"
edition = "2021"

[dependencies]

anyhow = "1.0.*"
databend-driver = "0.2.22"
env_logger = "0.10.0"
log = "0.4.17"
futures-util = "0.3.28"
rand = "0.8.5"
tokio = { version = "1.28.1", features = ["full"] }
clap = { version = "4.4.8", features = ["derive"] }
